Refactor using streams in Cell::distancesFrom0To9Cells()