@@ -3,6 +3,7 @@ package dssc.assignment.bank;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Cell {
 
@@ -54,57 +55,35 @@ public class Cell {
 
     @Override
     public String toString() {
-        switch (cellAsText) {
-            case ZERO_CELL:
-                return "0";
-            case ONE_CELL:
-                return "1";
-            case TWO_CELL:
-                return "2";
-            case THREE_CELL:
-                return "3";
-            case FOUR_CELL:
-                return "4";
-            case FIVE_CELL:
-                return "5";
-            case SIX_CELL:
-                return "6";
-            case SEVEN_CELL:
-                return "7";
-            case EIGHT_CELL:
-                return "8";
-            case NINE_CELL:
-                return "9";
-            default:
-                return "?";
-        }
+        return switch (cellAsText) {
+            case ZERO_CELL -> "0";
+            case ONE_CELL -> "1";
+            case TWO_CELL -> "2";
+            case THREE_CELL -> "3";
+            case FOUR_CELL -> "4";
+            case FIVE_CELL -> "5";
+            case SIX_CELL -> "6";
+            case SEVEN_CELL -> "7";
+            case EIGHT_CELL -> "8";
+            case NINE_CELL -> "9";
+            default -> "?";
+        };
     }
 
     private String fromIntToCell(int number) {
-        switch (number) {
-            case 0:
-                return ZERO_CELL;
-            case 1:
-                return ONE_CELL;
-            case 2:
-                return TWO_CELL;
-            case 3:
-                return THREE_CELL;
-            case 4:
-                return FOUR_CELL;
-            case 5:
-                return FIVE_CELL;
-            case 6:
-                return SIX_CELL;
-            case 7:
-                return SEVEN_CELL;
-            case 8:
-                return EIGHT_CELL;
-            case 9:
-                return NINE_CELL;
-            default:
-                return "";
-        }
+        return switch (number) {
+            case 0 -> ZERO_CELL;
+            case 1 -> ONE_CELL;
+            case 2 -> TWO_CELL;
+            case 3 -> THREE_CELL;
+            case 4 -> FOUR_CELL;
+            case 5 -> FIVE_CELL;
+            case 6 -> SIX_CELL;
+            case 7 -> SEVEN_CELL;
+            case 8 -> EIGHT_CELL;
+            case 9 -> NINE_CELL;
+            default -> "";
+        };
     }
 
     public String getCellAsText(){
@@ -121,14 +100,10 @@ public class Cell {
     }
 
     public List<Integer> distancesFrom0to9Cells() {
-        List<Integer> distances = new ArrayList<>();
-        List<String> cellsAsText = Arrays.asList(ZERO_CELL, ONE_CELL, TWO_CELL, THREE_CELL,
+        List<String> cellsAsText = new ArrayList<>(List.of(ZERO_CELL, ONE_CELL, TWO_CELL, THREE_CELL,
                                                  FOUR_CELL, FIVE_CELL, SIX_CELL, SEVEN_CELL,
-                                                 EIGHT_CELL, NINE_CELL);
-        for (String cellContent: cellsAsText){
-            distances.add(this.distanceFrom(new Cell(cellContent)));
-        }
-        return distances;
+                                                 EIGHT_CELL, NINE_CELL));
+        return cellsAsText.stream().map(Cell::new).map(this::distanceFrom).collect(Collectors.toList());
     }
 
     public List<Cell> nearestCells(){
